[package]
name = "last-rs"
version = "0.1.0"
authors = ["Ryan McWhorter <rmcwhorter@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rmcwhorter/last-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "last-rs is a very short utility for working with vectors."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
